--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,13 +8,15 @@ html {
 
 body {
     margin: 0;
+    padding: 1rem;
 }
 
 #game-container {
     display: grid;
-    grid-template-columns: repeat(4, auto);
-    grid-gap: 5px;
-    margin: 50px;
+    max-width: 600px;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 1rem;
+    margin: 0 auto;
     justify-content: center;
 }
 
@@ -35,23 +37,39 @@ body {
 
 .card {
     position: relative;
-    width: 125px;
-    height: 125px;
+    height: 6rem;
     border-radius: 5px;
+    transform: scale(1);
+    transform-style: preserve-3d;
+    transition: transform .5s;
+    box-shadow: 5px 5px 0px 0px rgba(218,218,218,1);
+}
+
+.card:active {
+    transform: scale(0.97);
+    transition: transform .2s;
 }
 
 .card-face {
     position: absolute;
-    width: 95%;
-    height: 95%;
+    width: 100%;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+    backface-visibility: hidden;
     border-radius: 5px;
-    box-shadow: 5px 5px 0px 0px rgba(218,218,218,1);
+}
+
+.card.flip {
+  transform: rotateY(180deg);
 }
 
 .card-front {
+    transform: rotateY(180deg);
+}
+
+.card-back {
     background-color: #ffa600;
     font-size: 4em;
     color: #ec8200;
