--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,4 +73,10 @@ body {
     background-color: #ffa600;
     font-size: 4em;
     color: #ec8200;
+    box-sizing: border-box;
+    border: 1px solid rgba(218,218,218,1);
+}
+
+.card-front img{
+    height: 50%;
 }
