--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
 * {
     box-sizing: border-box;
+    font-family: 'Raleway', sans-serif;
 }
 
 html {
@@ -9,6 +10,10 @@ html {
 body {
     margin: 0;
     padding: 1rem;
+}
+
+h1 {
+    font-size: 3em;
 }
 
 .overlay {
@@ -22,8 +27,7 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  color: #FF6D00;
-  font-family: Creepy, serif;
+  color: white;
   transition: background-color 500ms, font-size 500ms;
 }
 
@@ -43,7 +47,7 @@ body {
   }
   to {
     background-color: rgba(0, 0, 0, .8);
-    font-size: 10em;
+    font-size: 5em;
   }
 }
 
@@ -57,8 +61,11 @@ body {
 }
 
 .game-title {
-    font-size: 3em;
     text-align: center;
+}
+
+.logo {
+    width: 200px;
 }
 
 #game-info-container {
