--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,8 @@ body {
 }
 
 h1 {
-    font-size: 3em;
+    font-size: 2.5em;
+    margin-top: 0;
 }
 
 .overlay {
@@ -29,6 +30,7 @@ h1 {
   flex-direction: column;
   color: white;
   transition: background-color 500ms, font-size 500ms;
+  text-align: center;
 }
 
 .overlay-text-sub {
@@ -76,6 +78,7 @@ h1 {
 
 .game-info {
     font-size: 2em;
+    text-align: center;
 }
 
 .card {
@@ -139,4 +142,5 @@ h1 {
     display: flex;
     justify-content: center;
     align-items: center;
+    font-size: 75px;
 }
