--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,13 @@ h1 {
     margin-top: 0;
 }
 
+canvas {
+  image-rendering: -moz-crisp-edges;
+  image-rendering: -webkit-crisp-edges;
+  image-rendering: pixelated;
+  image-rendering: crisp-edges;
+}
+
 .overlay {
   top: 0;
   left: 0;
