--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,10 +85,20 @@ canvas {
     text-align: center;
 }
 
-.mute {
+.mute-button {
     position: absolute;
+    width: 2em;
+    height: 2em;
     top: 10px;
     right: 10px;
+}
+
+.mute {
+    background: url(../svg/volume-mute-solid.svg) no-repeat;
+}
+
+.unmute {
+    background: url(../svg/volume-up-solid.svg) no-repeat;
 }
 
 #card-container {
